# whichmovie_app

./: .gitignore  pyproject.toml
.github/workflows/: deploy.yml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_managers_user_username_and_more.py  0003_add_newsletter_opt_in.py
accounts/templates/account/: email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  profile.html  signup.html  verification_sent.html
accounts/templates/registration/: login.html  profile.html  signup.html
contrib/tmdb/: api.py
contrib/youtube/: api.py
frontend/assets/js/: modal.js  trailer.js  watchlist.js
movies/: admin.py  models.py  tasks.py  urls.py  views.py
movies/management/commands/: enrich_watch_providers.py
movies/migrations/: 0004_movie_genres_movie_original_language_and_more.py  0005_watchlist.py  0006_movie_watch_providers.py  0007_movie_movie_credits_movie_similar.py
movies/templates/movies/: base.html  movie_detail.html  movie_list.html  watchlist.html
movies/templatetags/: movie_extras.py
whichmovie/: settings.py  urls.py  views.py
whichmovie/templates/: base.html
whichmovie/templates/whichmovie/: home.html  privacy_policy.html  terms_of_service.html
